--- a/01_Introduccion.ipynb
+++ b/01_Introduccion.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Ejercicio 1: Introducción a la optimización"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Una empresa produce dos productos (x e y) con un beneficio neto de 40 y 30 $/kg respectivamente. Sin embargo, por restricciones de demanda, solo se pueden producir como mucho 40 kg de x en cada lote. Por capacidad de la planta solo se pueden producir 80 kg de productos totales. El almacenamiento de los productos también es una limitación, no pudiéndose almacenar más de 100 m3 de productos (densidad de 2.1 m3/kg y 1.7 m3/kg de x e y respectivamente). Establezca cuál es la cantidad óptima de x e y que se pueden producir"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "$$\n",
     "\\begin{align}\n",
@@ -27,34 +26,37 @@
     "    & && x,y \\geq  0  \\\\\n",
     "\\end{align}\n",
     "$$"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### El primer paso será instalar Pyomo y dos solvers (ipopt y glpk)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Esto lo ejecutamos desde el terminal de Anaconda:\n",
     "\n",
     "conda install -c conda-forge pyomo\n",
     "\n",
     "conda install -c conda-forge ipopt glpk"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "!pyomo help --solvers"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "\n",
       "Pyomo Solvers and Solver Managers\n",
@@ -184,102 +186,105 @@
      ]
     }
    ],
-   "source": [
-    "!pyomo help --solvers"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Importamos Pyomo"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from pyomo.environ import *"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Creamos un problema concreto, es decir, un objeto de la clase problema que ya contenga parámetros"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model = ConcreteModel()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Definimos las variables como no negativas"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "model.x = Var(domain=NonNegativeReals, bounds=(50,None))\n",
-    "model.y = Var(domain=PositiveIntegers)\n"
-   ]
+    "model.x = Var(domain=NonNegativeReals, bounds=(50,None))\r\n",
+    "model.y = Var(domain=PositiveIntegers)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Definimos la función objetivo"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "model.profit = Objective(expr = 40*model.x + 30*model.y,\n",
+    "model.profit = Objective(expr = 40*model.x + 30*model.y,\r\n",
     "                         sense=maximize)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Definimos la restricciones"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "model.demand = Constraint(expr = model.x <= 40)\n",
-    "model.laborA = Constraint(expr = model.x + model.y <= 80)\n",
+    "model.demand = Constraint(expr = model.x <= 40)\r\n",
+    "model.laborA = Constraint(expr = model.x + model.y <= 80)\r\n",
     "model.laborB = Constraint(expr = 2.1*model.x + 1.7*model.y <= 100)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "source": [
+    "model.dual = Suffix(direction=Suffix.IMPORT_EXPORT)\r\n",
+    "results = SolverFactory('glpk').solve(model)\r\n",
+    "model.pprint()\r\n",
+    "results.write()   "
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "2 Var Declarations\n",
       "    x : Size=1, Index=None\n",
@@ -340,163 +345,7 @@
      ]
     }
    ],
-   "source": [
-    "model.dual = Suffix(direction=Suffix.IMPORT_EXPORT)\n",
-    "results = SolverFactory('glpk').solve(model)\n",
-    "model.pprint()\n",
-    "results.write()   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Upper bound for integer variable y set to +1.0E+100.\n",
-      "WARNING: GAMS requires finite bounds for integer variables. 1.0E100 is as\n",
-      "    extreme as GAMS will define, and should be enough to appear unbounded. If\n",
-      "    the solver cannot handle this bound, explicitly set a smaller bound on the\n",
-      "    pyomo model, or try a different GAMS solver.\n",
-      "--- Job model.gms Start 04/23/21 17:22:22 25.0.0 r65090 WEX-WEI x86 64bit/MS Windows\n",
-      "GAMS 25.0.0   Copyright (C) 1987-2018 GAMS Development. All rights reserved\n",
-      "*** ************* BETA release\n",
-      "*** GAMS Base Module 25.0.0 r65090 BETA Released 12Jan18 WEI x86 64bit/MS Windows \n",
-      "*** ************* BETA release\n",
-      "Licensee: Small MUD - 5 User License                     S170124:0844AO-WIN\n",
-      "          Universidad Politecnica de Madrid, INGENIERIA QUIMICA INDUDC13043\n",
-      "          License for teaching and research at degree granting institutions\n",
-      "          License Admin: Ismael Diaz, ismael.diaz@upm.es                   \n",
-      "--- Starting compilation\n",
-      "--- model.gms(93) 2 Mb\n",
-      "--- Starting execution: elapsed 0:00:00.012\n",
-      "--- model.gms(32) 3 Mb\n",
-      "--- Generating MIP model GAMS_MODEL\n",
-      "--- model.gms(33) 3 Mb\n",
-      "---   4 rows  3 columns  8 non-zeroes\n",
-      "---   1 discrete-columns\n",
-      "--- Executing CPLEX (Solvelink=5): elapsed 0:00:00.015\n",
-      "\n",
-      "IBM ILOG CPLEX   25.0.0 r65090 BETA Released 12Jan18 WEI x86 64bit/MS Windows \n",
-      "Cplex 12.8.0.0\n",
-      "\n",
-      "Reading data...\n",
-      "Starting Cplex...\n",
-      "Space for names approximately 0.00 Mb\n",
-      "Use option 'names no' to turn use of names off\n",
-      "CPXPARAM_Advance                                 0\n",
-      "CPXPARAM_Simplex_Display                         2\n",
-      "CPXPARAM_Simplex_Limits_Iterations               2000000000\n",
-      "CPXPARAM_TimeLimit                               1000\n",
-      "CPXPARAM_WorkDir                                 \"C:\\Users\\Usuario\\AppData\\Local\\Temp\\tmpt0y_owk3\\225a\\\"\n",
-      "CPXPARAM_Threads                                 1\n",
-      "CPXPARAM_Parallel                                1\n",
-      "CPXPARAM_Tune_TimeLimit                          200\n",
-      "CPXPARAM_MIP_Tolerances_AbsMIPGap                0\n",
-      "CPXPARAM_MIP_Tolerances_MIPGap                   0.10000000000000001\n",
-      "CPXPARAM_MIP_Display                             4\n",
-      "Bound infeasibility column 'x1'.\n",
-      "Presolve time = 0.00 sec. (0.00 ticks)\n",
-      "\n",
-      "Root node processing (before b&c):\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "Sequential b&c:\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "                          ------------\n",
-      "Total (root+branch&cut) =    0.00 sec. (0.00 ticks)\n",
-      "MIP status(103): integer infeasible\n",
-      "Cplex Time: 0.00sec (det. 0.00 ticks)\n",
-      "CPLEX Error  1217: No solution exists.\n",
-      "Problem is integer infeasible.\n",
-      "--- Reading solution for model GAMS_MODEL\n",
-      "--- model.gms(93) 3 Mb\n",
-      "--- Putfile results C:\\Users\\Usuario\\AppData\\Local\\Temp\\tmpt0y_owk3\\results.dat\n",
-      "--- Putfile statresults C:\\Users\\Usuario\\AppData\\Local\\Temp\\tmpt0y_owk3\\resultsstat.dat\n",
-      "*** Status: Normal completion\n",
-      "--- Job model.gms Stop 04/23/21 17:22:22 elapsed 0:00:00.034\n",
-      "2 Var Declarations\n",
-      "    x : Size=1, Index=None\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :    50 :   0.0 :  None : False : False : NonNegativeReals\n",
-      "    y : Size=1, Index=None\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     1 :   0.0 :  None : False : False : PositiveIntegers\n",
-      "\n",
-      "1 Objective Declarations\n",
-      "    profit : Size=1, Index=None, Active=True\n",
-      "        Key  : Active : Sense    : Expression\n",
-      "        None :   True : maximize : 40*x + 30*y\n",
-      "\n",
-      "3 Constraint Declarations\n",
-      "    demand : Size=1, Index=None, Active=True\n",
-      "        Key  : Lower : Body : Upper : Active\n",
-      "        None :  -Inf :    x :  40.0 :   True\n",
-      "    laborA : Size=1, Index=None, Active=True\n",
-      "        Key  : Lower : Body  : Upper : Active\n",
-      "        None :  -Inf : x + y :  80.0 :   True\n",
-      "    laborB : Size=1, Index=None, Active=True\n",
-      "        Key  : Lower : Body          : Upper : Active\n",
-      "        None :  -Inf : 2.1*x + 1.7*y : 100.0 :   True\n",
-      "\n",
-      "1 Suffix Declarations\n",
-      "    dual : Direction=Suffix.IMPORT_EXPORT, Datatype=Suffix.FLOAT\n",
-      "        Key    : Value\n",
-      "        demand :   0.0\n",
-      "        laborA :   0.0\n",
-      "        laborB :   0.0\n",
-      "\n",
-      "7 Declarations: x y profit demand laborA laborB dual\n",
-      "# ==========================================================\n",
-      "# = Solver Results                                         =\n",
-      "# ==========================================================\n",
-      "# ----------------------------------------------------------\n",
-      "#   Problem Information\n",
-      "# ----------------------------------------------------------\n",
-      "Problem: \n",
-      "- Name: C\\x3a\\Users\\Usuario\\AppData\\Local\\Temp\\tmpt0y_owk3\\model.gms\n",
-      "  Lower bound: nan\n",
-      "  Upper bound: inf\n",
-      "  Number of objectives: 1\n",
-      "  Number of constraints: 4.0\n",
-      "  Number of variables: 3.0\n",
-      "  Number of binary variables: None\n",
-      "  Number of integer variables: 1.0\n",
-      "  Number of continuous variables: 2.0\n",
-      "  Number of nonzeros: 8.0\n",
-      "  Sense: maximize\n",
-      "# ----------------------------------------------------------\n",
-      "#   Solver Information\n",
-      "# ----------------------------------------------------------\n",
-      "Solver: \n",
-      "- Name: GAMS (25, 0, 0, 0)\n",
-      "  Status: ok\n",
-      "  Return code: 0\n",
-      "  Message: None\n",
-      "  User time: 0.020000268705189\n",
-      "  System time: None\n",
-      "  Wallclock time: None\n",
-      "  Termination condition: infeasible\n",
-      "  Termination message: None\n",
-      "# ----------------------------------------------------------\n",
-      "#   Solution Information\n",
-      "# ----------------------------------------------------------\n",
-      "Solution: \n",
-      "- number of solutions: 0\n",
-      "  number of solutions displayed: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "opt = SolverFactory('gams')\n",
-    "results = opt.solve(model,\n",
-    "    solver='cplex', tee=True)\n",
-    "\n",
-    "model.pprint()\n",
-    "results.write()\n"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
