Ejercicios de introducción resueltos

--- a/03_Introduccion.ipynb
+++ b/03_Introduccion.ipynb
@@ -72,17 +72,19 @@
       "    serial     Synchronously execute solvers locally\n",
       "\n",
       "If no solver manager is specified, Pyomo uses the serial solver\n",
-      "manager to execute solvers locally.  The pyro and phpyro solver\n",
-      "managers require the installation and configuration of the pyro\n",
-      "software.  The neos solver manager is used to execute solvers on the\n",
-      "NEOS optimization server.\n",
+      "manager to execute solvers locally.  The neos solver manager is used\n",
+      "to execute solvers on the NEOS optimization server.\n",
       "\n",
       "\n",
       "Serial Solver Interfaces\n",
       "------------------------\n",
-      "The serial, pyro and phpyro solver managers support the following\n",
-      "solver interfaces:\n",
+      "The serial manager supports the following solver interfaces:\n",
       "\n",
+      "    appsi_cbc                  Automated persistent interface to Cbc\n",
+      "   +appsi_cplex        20.1    Automated persistent interface to Cplex\n",
+      "    appsi_gurobi               Automated persistent interface to\n",
+      "                               Gurobi\n",
+      "    appsi_ipopt                Automated persistent interface to Ipopt\n",
       "   *asl                        Interface for solvers using the AMPL\n",
       "                               Solver Library\n",
       "    baron                      The BARON MINLP solver\n",
@@ -97,9 +99,11 @@
       "    cbc                        The CBC LP/MIP solver\n",
       "    conopt                     The CONOPT NLP solver\n",
       "    contrib.gjh                Interface to the AMPL GJH \"solver\"\n",
-      "    cplex                      The CPLEX LP/MIP solver\n",
-      "    cplex_direct               Direct python interface to CPLEX\n",
-      "    cplex_persistent           Persistent python interface to CPLEX\n",
+      "   +cplex              20.1    The CPLEX LP/MIP solver\n",
+      "   +cplex_direct       20.1    Direct python interface to CPLEX\n",
+      "   +cplex_persistent   20.1    Persistent python interface to CPLEX\n",
+      "   +cyipopt            1.0.3   Cyipopt: direct python bindings to the\n",
+      "                               Ipopt NLP solver\n",
       "   +gams               25.0    The GAMS modeling language\n",
       "   +gdpbb              19.5.7  Branch and Bound based GDP Solver\n",
       "   +gdpopt             20.2.28 The GDPopt decomposition-based\n",
@@ -112,25 +116,28 @@
       "    ipopt                      The Ipopt NLP solver\n",
       "   +mindtpy            0.1     MindtPy: Mixed-Integer Nonlinear\n",
       "                               Decomposition Toolbox in Pyomo\n",
-      "    mosek                      Direct python interface to Mosek\n",
+      "    mosek                      The MOSEK LP/QP/SOCP/MIP solver\n",
+      "    mosek_direct               Direct python interface to MOSEK\n",
+      "    mosek_persistent           Persistent python interface to MOSEK.\n",
       "   +mpec_minlp                 MPEC solver transforms to a MINLP\n",
       "   +mpec_nlp                   MPEC solver that optimizes a nonlinear\n",
       "                               transformation\n",
       "   +multistart                 MultiStart solver for NLPs\n",
       "    path                       Nonlinear MCP solver\n",
       "    pico                       The PICO LP/MIP solver\n",
-      "   +ps                         Pyomo's simple pattern search optimizer\n",
       "   *py                         Direct python solver interfaces\n",
       "    scip                       The SCIP LP/MIP solver\n",
       "   +trustregion                Trust region filter method for black\n",
       "                               box/glass box optimization\n",
       "    xpress                     The XPRESS LP/MIP solver\n",
+      "    xpress_direct              Direct python interface to XPRESS\n",
+      "    xpress_persistent          Persistent python interface to Xpress\n",
       "\n",
       "The leading symbol (one of *, -, +) indicates the current solver\n",
       "availability.  A plus (+) indicates the solver is currently available\n",
       "to be run from Pyomo with the serial solver manager, and (if\n",
       "applicable) has a valid license.  A minus (-) indicates the solver\n",
-      "executables are available but do not reporthaving a valid license.\n",
+      "executables are available but do not report having a valid license.\n",
       "The solver may still be usable in an unlicensed or \"demo\" mode for\n",
       "limited problem sizes. An asterisk (*) indicates meta-solvers or\n",
       "generic interfaces, which are always available.\n",
@@ -172,15 +179,16 @@
       "    knitro       Convex MINLP solver\n",
       "    l-bfgs-b     Bound-constrained NLP solver\n",
       "    lancelot     Augmented Lagrangian NLP solver\n",
-      "    lgo          Unexpected NEOS solver\n",
+      "    lgo          Lipschitz-Continuous Global Optimizer\n",
       "    loqo         Interior point NLP solver\n",
       "    minlp        Heuristic MINLP solver\n",
       "    minos        SLC NLP solver\n",
       "    minto        MILP solver\n",
       "    mosek        Interior point NLP solver\n",
+      "    octeract     Unexpected NEOS solver\n",
       "    ooqp         Convex QP solver\n",
       "    path         Nonlinear MCP solver\n",
-      "    raposa       Unexpected NEOS solver\n",
+      "    raposa       A Global Solver for Polynomial Programming Problems\n",
       "    snopt        SQP NLP solver\n",
       "\n"
      ]
@@ -341,7 +349,7 @@
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.04738497734069824\n"
+      "  Time: 0.06781768798828125\n"
      ]
     }
    ],
@@ -350,9 +358,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -365,6 +372,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "interpreter": {
+   "hash": "11ffc019a02cc0e21e59860b66c88ea81995ce9237607e8ab2c087a287ee4867"
   }
  },
  "nbformat": 4,
