--- a/03_Introduccion.ipynb
+++ b/03_Introduccion.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "source": [
     "!pyomo help --solvers"
    ],
@@ -72,19 +72,17 @@
       "    serial     Synchronously execute solvers locally\n",
       "\n",
       "If no solver manager is specified, Pyomo uses the serial solver\n",
-      "manager to execute solvers locally.  The neos solver manager is used\n",
-      "to execute solvers on the NEOS optimization server.\n",
+      "manager to execute solvers locally.  The pyro and phpyro solver\n",
+      "managers require the installation and configuration of the pyro\n",
+      "software.  The neos solver manager is used to execute solvers on the\n",
+      "NEOS optimization server.\n",
       "\n",
       "\n",
       "Serial Solver Interfaces\n",
       "------------------------\n",
-      "The serial manager supports the following solver interfaces:\n",
+      "The serial, pyro and phpyro solver managers support the following\n",
+      "solver interfaces:\n",
       "\n",
-      "    appsi_cbc                  Automated persistent interface to Cbc\n",
-      "   +appsi_cplex        20.1    Automated persistent interface to Cplex\n",
-      "    appsi_gurobi               Automated persistent interface to\n",
-      "                               Gurobi\n",
-      "    appsi_ipopt                Automated persistent interface to Ipopt\n",
       "   *asl                        Interface for solvers using the AMPL\n",
       "                               Solver Library\n",
       "    baron                      The BARON MINLP solver\n",
@@ -99,12 +97,12 @@
       "    cbc                        The CBC LP/MIP solver\n",
       "    conopt                     The CONOPT NLP solver\n",
       "    contrib.gjh                Interface to the AMPL GJH \"solver\"\n",
-      "   +cplex              20.1    The CPLEX LP/MIP solver\n",
-      "   +cplex_direct       20.1    Direct python interface to CPLEX\n",
-      "   +cplex_persistent   20.1    Persistent python interface to CPLEX\n",
-      "   +cyipopt            1.0.3   Cyipopt: direct python bindings to the\n",
+      "    cplex                      The CPLEX LP/MIP solver\n",
+      "    cplex_direct               Direct python interface to CPLEX\n",
+      "    cplex_persistent           Persistent python interface to CPLEX\n",
+      "    cyipopt                    Cyipopt: direct python bindings to the\n",
       "                               Ipopt NLP solver\n",
-      "   +gams               25.0    The GAMS modeling language\n",
+      "   +gams               25.0.3  The GAMS modeling language\n",
       "   +gdpbb              19.5.7  Branch and Bound based GDP Solver\n",
       "   +gdpopt             20.2.28 The GDPopt decomposition-based\n",
       "                               Generalized Disjunctive Programming\n",
@@ -125,6 +123,7 @@
       "   +multistart                 MultiStart solver for NLPs\n",
       "    path                       Nonlinear MCP solver\n",
       "    pico                       The PICO LP/MIP solver\n",
+      "   +ps                         Pyomo's simple pattern search optimizer\n",
       "   *py                         Direct python solver interfaces\n",
       "    scip                       The SCIP LP/MIP solver\n",
       "   +trustregion                Trust region filter method for black\n",
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "source": [
     "from pyomo.environ import *"
    ],
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "source": [
     "model = ConcreteModel()"
    ],
@@ -237,10 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "source": [
-    "model.x = Var(domain=NonNegativeReals, bounds=(50,None))\r\n",
-    "model.y = Var(domain=PositiveIntegers)\r\n"
+    "model.x = Var(domain=NonNegativeReals)\r\n",
+    "model.y = Var(domain=NonNegativeReals)\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "source": [
     "model.profit = Objective(expr = 40*model.x + 30*model.y,\r\n",
     "                         sense=maximize)"
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "source": [
     "model.demand = Constraint(expr = model.x <= 40)\r\n",
     "model.laborA = Constraint(expr = model.x + model.y <= 80)\r\n",
@@ -282,9 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "source": [
-    "model.dual = Suffix(direction=Suffix.IMPORT_EXPORT)\r\n",
     "results = SolverFactory('glpk').solve(model)\r\n",
     "model.pprint()\r\n",
     "results.write()   "
@@ -297,10 +295,10 @@
       "2 Var Declarations\n",
       "    x : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :    50 :  None :  None : False :  True : NonNegativeReals\n",
+      "        None :     0 :  40.0 :  None : False : False : NonNegativeReals\n",
       "    y : Size=1, Index=None\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     1 :  None :  None : False :  True : PositiveIntegers\n",
+      "        Key  : Lower : Value            : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 : 9.41176470588235 :  None : False : False : NonNegativeReals\n",
       "\n",
       "1 Objective Declarations\n",
       "    profit : Size=1, Index=None, Active=True\n",
@@ -318,11 +316,7 @@
       "        Key  : Lower : Body          : Upper : Active\n",
       "        None :  -Inf : 2.1*x + 1.7*y : 100.0 :   True\n",
       "\n",
-      "1 Suffix Declarations\n",
-      "    dual : Direction=Suffix.IMPORT_EXPORT, Datatype=Suffix.FLOAT\n",
-      "        Key : Value\n",
-      "\n",
-      "7 Declarations: x y profit demand laborA laborB dual\n",
+      "6 Declarations: x y profit demand laborA laborB\n",
       "# ==========================================================\n",
       "# = Solver Results                                         =\n",
       "# ==========================================================\n",
@@ -331,8 +325,8 @@
       "# ----------------------------------------------------------\n",
       "Problem: \n",
       "- Name: unknown\n",
-      "  Lower bound: -inf\n",
-      "  Upper bound: inf\n",
+      "  Lower bound: 1882.35294117647\n",
+      "  Upper bound: 1882.35294117647\n",
       "  Number of objectives: 1\n",
       "  Number of constraints: 4\n",
       "  Number of variables: 3\n",
@@ -343,14 +337,80 @@
       "# ----------------------------------------------------------\n",
       "Solver: \n",
       "- Status: ok\n",
-      "  Termination condition: infeasible\n",
+      "  Termination condition: optimal\n",
       "  Statistics: \n",
       "    Branch and bound: \n",
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.06781768798828125\n"
+      "  Time: 0.044640302658081055\n",
+      "# ----------------------------------------------------------\n",
+      "#   Solution Information\n",
+      "# ----------------------------------------------------------\n",
+      "Solution: \n",
+      "- number of solutions: 0\n",
+      "  number of solutions displayed: 0\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "model.x.value"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "40.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "model.y.value"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9.41176470588235"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "model.profit.expr()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1882.3529411764705"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
     }
    ],
    "metadata": {}
@@ -359,7 +419,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -371,10 +431,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   },
   "interpreter": {
-   "hash": "11ffc019a02cc0e21e59860b66c88ea81995ce9237607e8ab2c087a287ee4867"
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
