--- a/01_Introduccion.ipynb
+++ b/01_Introduccion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "source": [
     "from IPython.display import Image \r\n",
     "Image(filename='img_enun/E1.png')"
@@ -24,7 +24,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 1
     }
    ],
    "metadata": {}
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "source": [
     "from pyomo.environ import *"
    ],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "source": [
     "model = ConcreteModel()"
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "source": [
     "model.t1 = Var(domain=NonNegativeReals, bounds=(0,8))\r\n",
     "model.t2 = Var(domain=NonNegativeReals)\r\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "source": [
     "model.profit = Objective(expr = 5*model.t1 + 3*model.t2+1*model.t3,\r\n",
     "                         sense=maximize)"
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "source": [
     "model.tiempolibre = Constraint(expr = model.t1 + model.t2+model.t3 <= 8)\r\n",
     "model.dinero = Constraint(expr = 10*model.t1 + 5*model.t2+1*model.t3 <= 30)"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "source": [
     "results = SolverFactory('glpk').solve(model)\r\n",
     "model.pprint()\r\n",
@@ -177,7 +177,7 @@
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.08710908889770508\n",
+      "  Time: 0.05644083023071289\n",
       "# ----------------------------------------------------------\n",
       "#   Solution Information\n",
       "# ----------------------------------------------------------\n",
@@ -188,12 +188,110 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "model.profit.expr()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "19.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "model.t1.value"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "model.t2.value"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5.5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "model.t3.value"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "res=[model.t1.value,model.t2.value,model.t3.value]\r\n",
+    "print(res)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.0, 5.5, 2.5]\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.3 64-bit"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -205,10 +303,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   },
   "interpreter": {
-   "hash": "11ffc019a02cc0e21e59860b66c88ea81995ce9237607e8ab2c087a287ee4867"
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
